// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider demo examples Snapshots: theme-provider 1`] = `
.css-0,
[data-css-0] {
  font-family: "Open Sans";
}

.css-0 > *,
[data-css-0] > * {
  margin-right: 0.5rem;
}

.css-1,
[data-css-1] {
  background-color: lavender;
  color: tomato;
  display: inline-block;
  outline: 1px solid #c8d1e0;
  padding: 0.5em;
}

<glamorous(div)>
  <div
    className="css-0"
  >
    <ThemeProvider
      theme={
        Object {
          "color": "tomato",
        }
      }
    >
      <ThemeProvider
        theme={
          Object {
            "color": "tomato",
          }
        }
      >
        <Sample>
          <glamorous(span)>
            <span
              className="css-1"
            >
              Sample
            </span>
          </glamorous(span)>
        </Sample>
      </ThemeProvider>
    </ThemeProvider>
  </div>
</glamorous(div)>
`;

exports[`ThemeProvider merges nested theme variables 1`] = `
.css-0,
[data-css-0] {
  background-color: lavender;
  color: tomato;
  display: inline-block;
  outline: 1px solid undefined;
}

<ThemeProvider
  theme={
    Object {
      "color": "black",
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "color": "black",
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "color": "tomato",
        }
      }
    >
      <ThemeProvider
        theme={
          Object {
            "color": "tomato",
          }
        }
      >
        <Sample>
          <glamorous(span)>
            <span
              className="css-0"
            >
              Sample
            </span>
          </glamorous(span)>
        </Sample>
      </ThemeProvider>
    </ThemeProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`ThemeProvider merges themes instead of overriding 1`] = `
.css-0,
[data-css-0] {
  background-color: lavender;
  color: black;
  display: inline-block;
  outline: 1px solid undefined;
}

<ThemeProvider
  theme={
    Object {
      "color": "black",
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "color": "black",
      }
    }
  >
    <ThemeProvider
      theme={
        Object {
          "color_warning": "tomato",
        }
      }
    >
      <ThemeProvider
        theme={
          Object {
            "color_warning": "tomato",
          }
        }
      >
        <Sample>
          <glamorous(span)>
            <span
              className="css-0"
            >
              Sample
            </span>
          </glamorous(span)>
        </Sample>
      </ThemeProvider>
    </ThemeProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`ThemeProvider renders correctly with default theme 1`] = `
.css-0,
[data-css-0] {
  background-color: lavender;
  color: #333840;
  display: inline-block;
  outline: 1px solid #c8d1e0;
  padding: 0.5em;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_active": "#ebeff5",
        "backgroundColor_dangerPrimary": "#de1b1b",
        "backgroundColor_dangerPrimary_active": "#b80d0d",
        "backgroundColor_dangerPrimary_focus": "#de1b1b",
        "backgroundColor_dangerPrimary_hover": "#f55353",
        "backgroundColor_danger_active": "#fad4d4",
        "backgroundColor_danger_focus": "#faf0f0",
        "backgroundColor_danger_hover": "#faf0f0",
        "backgroundColor_disabled": "#dde3ed",
        "backgroundColor_focus": "#f5f7fa",
        "backgroundColor_hover": "#f5f7fa",
        "backgroundColor_successPrimary": "#2a854e",
        "backgroundColor_successPrimary_active": "#20693d",
        "backgroundColor_successPrimary_focus": "#2a854e",
        "backgroundColor_successPrimary_hover": "#3ba164",
        "backgroundColor_success_active": "#abedc5",
        "backgroundColor_success_focus": "#e1faeb",
        "backgroundColor_success_hover": "#e1faeb",
        "backgroundColor_themePrimary": "#3272d9",
        "backgroundColor_themePrimary_active": "#1d5bbf",
        "backgroundColor_themePrimary_focus": "#3272d9",
        "backgroundColor_themePrimary_hover": "#5691f0",
        "backgroundColor_theme_selected": "#f0f5fc",
        "backgroundColor_theme_selectedActive": "#accbfc",
        "backgroundColor_theme_selectedHover": "#cfe0fc",
        "backgroundColor_warningPrimary": "#ad5f00",
        "backgroundColor_warningPrimary_active": "#8a4d03",
        "backgroundColor_warningPrimary_focus": "#ad5f00",
        "backgroundColor_warningPrimary_hover": "#cf7911",
        "backgroundColor_warning_active": "#fad8af",
        "backgroundColor_warning_focus": "#fcf2e6",
        "backgroundColor_warning_hover": "#fcf2e6",
        "borderColor": "#c8d1e0",
        "borderColor_danger": "#de1b1b",
        "borderColor_danger_active": "#b80d0d",
        "borderColor_danger_focus": "#b80d0d",
        "borderColor_danger_hover": "#f55353",
        "borderColor_success": "#2a854e",
        "borderColor_success_active": "#20693d",
        "borderColor_success_focus": "#20693d",
        "borderColor_success_hover": "#3ba164",
        "borderColor_theme": "#3272d9",
        "borderColor_theme_active": "#1d5bbf",
        "borderColor_theme_focus": "#1d5bbf",
        "borderColor_theme_hover": "#5691f0",
        "borderColor_warning": "#ad5f00",
        "borderColor_warning_active": "#8a4d03",
        "borderColor_warning_focus": "#8a4d03",
        "borderColor_warning_hover": "#cf7911",
        "borderRadius_1": "0.1875em",
        "boxShadow_1": "0 1px 2px 0 rgba(0,0,0,0.2), 0 2px 4px 0 rgba(0,0,0,0.2)",
        "boxShadow_2": "0 2px 4px 0 rgba(0,0,0,0.2), 0 4px 8px 0 rgba(0,0,0,0.2)",
        "boxShadow_3": "0 4px 8px 0 rgba(0,0,0,0.2), 0 8px 16px 0 rgba(0,0,0,0.2)",
        "boxShadow_4": "0 8px 16px 0 rgba(0,0,0,0.2), 0 20px 16px -8px rgba(0,0,0,0.2)",
        "boxShadow_5": "0 16px 24px 0 rgba(0,0,0,0.2), 0 32px 24px -16px rgba(0,0,0,0.2)",
        "boxShadow_focusInner": "#ffffff",
        "breakpoint_medium": "768px",
        "breakpoint_narrow": "512px",
        "breakpoint_wide": "1024px",
        "color": "#333840",
        "color_black": "#1d1f24",
        "color_danger": "#de1b1b",
        "color_dangerPrimary": "#ffffff",
        "color_danger_active": "#b80d0d",
        "color_danger_focus": "#de1b1b",
        "color_danger_hover": "#f55353",
        "color_disabled": "#afbacc",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_inverted": "#ffffff",
        "color_mouse": "#58606e",
        "color_readOnly": "#58606e",
        "color_required": "#de1b1b",
        "color_success": "#2a854e",
        "color_successPrimary": "#ffffff",
        "color_success_active": "#20693d",
        "color_success_focus": "#2a854e",
        "color_success_hover": "#3ba164",
        "color_theme": "#3272d9",
        "color_themePrimary": "#ffffff",
        "color_theme_10": "#f0f5fc",
        "color_theme_100": "#15233b",
        "color_theme_20": "#cfe0fc",
        "color_theme_30": "#accbfc",
        "color_theme_40": "#84b1fa",
        "color_theme_50": "#5691f0",
        "color_theme_60": "#3272d9",
        "color_theme_70": "#1d5bbf",
        "color_theme_80": "#114599",
        "color_theme_90": "#103570",
        "color_theme_active": "#1d5bbf",
        "color_theme_focus": "#3272d9",
        "color_theme_hover": "#5691f0",
        "color_warning": "#ad5f00",
        "color_warningPrimary": "#ffffff",
        "color_warning_active": "#8a4d03",
        "color_warning_focus": "#ad5f00",
        "color_warning_hover": "#cf7911",
        "color_white": "#ffffff",
        "direction": "ltr",
        "fontFamily": "\\"Open Sans\\"",
        "fontFamily_monospace": "\\"SF Mono\\", \\"Droid Sans Mono\\", \\"Source Code Pro\\", Monaco, Consolas, \\"Courier New\\", Courier, monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": "16px",
        "fontSize_mouse": "0.6875em",
        "fontSize_prose": "1em",
        "fontSize_ui": "0.875em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "h1_color": "#333840",
        "h1_fontSize": "2.125em",
        "h1_fontWeight": 800,
        "h2_color": "#58606e",
        "h2_fontSize": "1.75em",
        "h2_fontWeight": 700,
        "h3_color": "#58606e",
        "h3_fontSize": "1.375em",
        "h3_fontWeight": 700,
        "h4_color": "#58606e",
        "h4_fontSize": "1.125em",
        "h4_fontWeight": 700,
        "h5_color": "#333840",
        "h5_fontSize": "0.875em",
        "h5_fontWeight": 700,
        "h6_color": "#58606e",
        "h6_fontSize": "0.875em",
        "h6_fontWeight": 400,
        "icon_color": "#58606e",
        "icon_color_danger": "#de1b1b",
        "icon_color_success": "#2a854e",
        "icon_color_theme": "#3272d9",
        "icon_color_warning": "#ad5f00",
        "input_backgroundColor": "#ffffff",
        "input_backgroundColor_disabled": "#ebeff5",
        "input_color_placeholder": "#8e99ab",
        "lineHeight": 1.25,
        "lineHeight_heading": 1.25,
        "lineHeight_heading_small": 1.5,
        "lineHeight_prose": 1.5,
        "panel_backgroundColor": "#ffffff",
        "panel_backgroundColor_inverted": "#434a54",
        "panel_borderColor": "#ebeff5",
        "panel_borderColor_inverted": "#434a54",
        "size_jumbo": "3.25em",
        "size_large": "2.5em",
        "size_medium": "2em",
        "size_small": "1.5em",
        "space_inline_lg": "1.5em",
        "space_inline_md": "1em",
        "space_inline_sm": "0.5em",
        "space_inline_xl": "2em",
        "space_inline_xs": "0.25em",
        "space_inline_xxl": "4em",
        "space_inline_xxs": "0.125em",
        "space_inset_lg": "1.5em",
        "space_inset_md": "1em",
        "space_inset_sm": "0.5em",
        "space_stack_lg": "1.5em",
        "space_stack_md": "1em",
        "space_stack_sm": "0.5em",
        "space_stack_xl": "2em",
        "space_stack_xs": "0.25em",
        "space_stack_xxl": "4em",
        "space_stack_xxs": "0.125em",
        "well_backgroundColor": "#ebeff5",
        "well_backgroundColor_danger": "#fad4d4",
        "well_backgroundColor_success": "#abedc5",
        "well_backgroundColor_warning": "#fad8af",
        "well_borderColor_danger": "#fa8e8e",
        "well_borderColor_success": "#57c282",
        "well_borderColor_warning": "#e89c3f",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <Sample>
      <glamorous(span)>
        <span
          className="css-0"
        >
          Sample
        </span>
      </glamorous(span)>
    </Sample>
  </ThemeProvider>
</ThemeProvider>
`;
